<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary_variant"
    android:scrollIndicators="bottom|right"
    android:scrollbars="vertical"
    tools:context=".ListActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableLayout
            android:id="@+id/item_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:padding="16dp"
            tools:context=".ListActivity">

            <!-- Header Row -->
            <TableRow>
                <TextView
                    android:id="@+id/item_name"
                    android:padding="8dp"
                    android:text="@string/item_name"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/item_quantity"
                    android:text="@string/change_count"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_item"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/sms_button"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:background="@color/design_default_color_secondary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sms_notification" />

</androidx.constraintlayout.widget.ConstraintLayout>